[package]
name = "solana-test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
maplit = "1.0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
tokio = { version = "1.42.0", features = ["full", "rt"] }
tonic = "0.12.3"
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = { version = "4.1.1", features = ["plugin"] }
